--- a/_posts/2020-08-02-hobbies.md
+++ b/_posts/2020-08-02-hobbies.md
@@ -1,12 +1,16 @@
 ---
 layout: post
-title: MicroStrategy World
-subtitle: test
+title: Interests
+subtitle: These are some of my interests
 cover-img: /assets/img/path.jpg
 thumbnail-img: /assets/img/thumb.png
 share-img: /assets/img/path.jpg
 tags: [books, test]
 ---
+
+![Crepe](https://daharsh4.github.io/assets/img/realpicture.png)
+
+![Crepe](https://daharsh4.github.io/assets/img/realpicture.png)
 
 Under what circumstances should we step off a path? When is it essential that we finish what we start? If I bought a bag of peanuts and had an allergic reaction, no one would fault me if I threw it out. If I ended a relationship with a woman who hit me, no one would say that I had a commitment problem. But if I walk away from a seemingly secure route because my soul has other ideas, I am a flake?
 
